--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,10 @@
 version: '3'
 services:
   backend:
-    image: python:3.9  # Используем официальный образ Python
-    environment:
-      - PYTHONDONTWRITEBYTECODE=1
-      - PYTHONUNBUFFERED=1
-    working_dir: /devops
-    command: python app.py  # Команда для запуска приложения
+    build: .
     ports:
-      - "5000:5000"  # Проксирование порта из контейнера на хост
-    volumes:
-      - .:/devops  # Монтируем текущий каталог в контейнер
-  backend-2:
-    image: python:3.9  # Используем официальный образ Python
-    environment:
-      - PYTHONDONTWRITEBYTECODE=1
-      - PYTHONUNBUFFERED=1
-    working_dir: /devops
-    command: python app.py  # Команда для запуска приложения
+      - "5000:5000"
+  myapp:
+    build: .
     ports:
-      - "5001:5000"  # Проксирование порта из контейнера на хост
-    volumes:
-      - .:/devops  # Монтируем текущий каталог в контейнер
+      - "5001:5000"
