--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
   backend:
-    build: .
+    image: task-manager-flask
     ports:
       - "5000:5000"
   myapp:
-    build: .
+    image: task-manager-flask
     ports:
       - "5001:5000"
