--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,11 @@ services:
     image: task-manager-flask
     ports:
       - "5000:5000"
+    deploy:
+      mode: global
   myapp:
     image: task-manager-flask
     ports:
       - "5001:5000"
+    deploy:
+      mode: global
