--- a/Inventory.yaml
+++ b/Inventory.yaml
@@ -1,8 +1,8 @@
 all:
   hosts:
-    webserver1:
+    nginx:
       ansible-host: 149.154.66.6
-    webserver2:
+    postres:
       ansible-host: 149.154.66.32
   vara:
     ansible-user: root
